--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,8 +91,8 @@
    <%= yield %>
 
 <footer>
-  <div class="mediataiou">
-    <div class="fjoudan">
+  <div class="mediataiou2">
+    <div class="footer_nav clearfix">
       <div class="links">
         <ul>
             <li><a href="/hyoshigis/aboutus">会社案内</a></li>
@@ -101,7 +101,7 @@
             <li><a href="/hyoshigis/more">よくある質問</a></li>
         </ul>
       </div>
-      <div class="sns clearfix">
+      <div class="sns">
         <div class="sns2">
           <div class="instagram">
             <a href="https://www.instagram.com/hyoshigi/"><img alt="instagram" src="/instagram.png"/></a>
@@ -115,7 +115,6 @@
         <div class="sns2">
           <div class="weibo">
             <a href="https://www.weibo.com/hyoshigi"><img alt="weibo" src="/weibo.png"/></a>
-            <!--<a href="#"><img alt="weibo" src="/weibo.png"/></a>-->
           </div>
         </div>
       </div>
