--- a/app/views/hyoshigi/index.html.erb
+++ b/app/views/hyoshigi/index.html.erb
@@ -1,5 +1,184 @@
-<!--<p>テスト</p>-->
+<div class="joudan clearfix">
+   <div class="why_n_picture">
+        <a class="modal-trigger" href="#modal1">
+            <div class="picture clearfix">
+                <div class="shishi">
+                    <img alt="shishi" src="/shishi.svg"/>
+                </div>
+                <div class="kiki">
+                    <img alt="kiki" src="/kiki.svg"/>
+                </div>
+                <div class="picture_background">
+                    <div class="picture_background2">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <!--モーダル-->
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <p><br>我々の祖先、ホモ・サピエンスはこれまで地球上に生存したいくつもの人類の一つであり、現存する唯一の人類です。決して、他の人類より強かったから生き残れた訳ではありません。弱いゆえに、石器を作ったり、道具を進化させたり、集団活動を取ってきたからです。<br>
+                <br>技術の発展やグローバル化のスピードは年々早くなっています。お子さんが成人している頃、世の中では、どんな職業が残り、どんな技術が必要とされるのか、想像も付きません。<br><br>
+                その中で我々が提供する中国語が未来を切り開く道具の一つになれるようにという願いを込めて、弊社のキャラクターを猿人の「シシ」と「キキ」に致しました。
+                </p>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">閉じる</a>
+            </div>
+        </div>
+        <div class="why">
+            <div class="why2">
+                <a href="/hyoshigi/why"></a>
+                <span>どうして<br>中国語？</span>
+            </div>
+            <div class="why34 clearfix">
+                <div class="why3">
+                    <span>中国語を勉強するメリット</span>
+                </div>
+                <div class="why4">
+                    <span>
+                        ・つける仕事の幅が広がる<br/>
+                        ・触れる世界の幅が広がる<br/>
+                        ・交流できる人が増える
+                    </span>
+                </div>
+               <!--もっと詳しくのボタン-->
+                <div class="mottokuwashiku">
+                    <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                        <i class="material-icons right">chat</i>
+                        <a href="/hyoshigi/why"></a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="what">
+        <div class="what2">
+            <a href="/hyoshigi/what"></a>
+            <span>拍子木塾<br>とは？</span>
+        </div>
+        <div class="what34 clearfix">
+            <a href="/hyoshigi/what"></a>
+            <div class="what3">
+                <span>拍子木塾が目指す<br/>中国語教育</span>
+            </div>
+            <div class="what4">
+                <span>
+                    ・標準な中国語<br/>
+                    ・オリジナル教材<br/>
+                    ・聞く、話すを重視
+                </span>
+            </div>
+        <!--もっと詳しくのボタン-->
+            <div class="mottokuwashiku">
+                <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                    <i class="material-icons right">chat</i>
+                    <a href="/hyoshigi/what"></a>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<div class = "box">
-    てすと
+<div class="gedan clearfix">
+    <div class="what_kind">
+        <div class="what_kind2">
+            <a href="/hyoshigi/what_kind"></a>
+            <span>どんな<br>授業？</span>
+        </div>
+        <div class="what_kind34 clearfix">
+            <a href="/hyoshigi/what_kind"></a>
+            <div class="what_kind3">
+                <span>どんな授業があるの？</span>
+            </div>
+            <div class="what_kind4">
+                <span>
+                    ・徹底した少人数制<br/>
+                    ・コース紹介<br/>
+                    ・学習内容
+                </span>
+            </div>
+        <!--もっと詳しくのボタン-->
+            <div class="mottokuwashiku">
+                <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                    <i class="material-icons right">chat</i>
+                    <a href="/hyoshigi/what_kind"></a>
+                </button>
+            </div>            
+        </div>
+    </div>
+    
+    <div class="how_much" id="test">
+        <div class="how_much2">
+            <a href="/hyoshigi/how_much"></a>
+            <span>料金<br>は？</span>
+        </div>
+        <div class="how_much34 clearfix">
+            <a href="/hyoshigi/how_much"></a>
+            <div class="how_much3">
+                <span>授業料は？</span>
+            </div>
+            <div class="how_much4">
+                <span>
+                    ・個別クラス<br/>
+                    ・週1少人数クラス<br/>
+                    ・週2少人数クラス
+                </span>
+                </a>
+            </div>
+        <!--もっと詳しくのボタン-->
+            <div class="mottokuwashiku">
+                <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                    <i class="material-icons right">chat</i>
+                    <a href="/hyoshigi/how_much"></a>
+                </button>
+            </div>   
+        </div>       
+    </div>
+    
+    <div class="where">
+        <div class="where2">
+            <a href="/hyoshigi/where"></a>
+            <span>教室は<br>どこ？</span>
+        </div>
+        <div class="where34 clearfix">
+            <a href="/hyoshigi/where"></a>
+            <div class="where3">
+                <span>教室はどこにあるの？</span>
+            </div>
+            <div class="mottokuwashiku">
+                <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                    <i class="material-icons right">chat</i>
+                    <a href="/hyoshigi/where"></a>
+                </button>
+            </div>   
+        </div>
+    </div>
+    
+    <div class="more">
+        <div class="more2">
+            <a href="/hyoshigi/more"></a>
+            <span>もっと<br>知りたい</span>
+        </div>
+        <div class="more34 clearfix">
+            <a href="/hyoshigi/more"></a>
+            <div class="more3">
+                <span>もっと知りたい！</span>
+            </div>
+            <div class="more4">
+                <span>
+                    ・Q & A<br/>
+                    ・お問合せ<br/>
+                    ・体験会
+                </span>
+            </div>
+            <!--もっと詳しくのボタン-->
+            <div class="mottokuwashiku">
+                <button class="btn waves-effect" type="submit" name="action">もっと詳しく
+                    <i class="material-icons right">chat</i>
+                    <a href="/hyoshigi/more"></a>
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
