--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,16 @@ body {
     font-family: 'Kosugi Maru', sans-serif;
 }
 
-// body.zh {
-//     font-family: 'Noto Sans SC', sans-serif;
-// }
+.zh {
+    // font-family: 'ZCOOL XiaoWei', serif;
+    font-family: 'Noto Sans SC', sans-serif;
+    
+}
+
+.en {
+    font-family: 'Noto Sans JP', sans-serif;
+    // font-family: 'Ubuntu Condensed', sans-serif;
+}
 @media (max-width: 410px) {
     body {
         margin: 0;
@@ -259,6 +266,16 @@ body {
         }
     }
     
+    .en {
+        header .header_back_color .mediataiou {
+            .header_logo {
+                margin-left: 8px;
+            }
+            .header_right {
+                margin-right: 8px;
+            }
+        } 
+    }
 }
 
 @media  (min-width: 411px) and (max-width: 599px) {
@@ -499,6 +516,17 @@ body {
             box-sizing: border-box;
             text-align: center;
         }
+    }
+    
+    .en {
+        header .header_back_color .mediataiou {
+            .header_logo .logo {
+                margin-left: 7px;
+            }
+            .header_right .annai .annai2 {
+                padding-left: 5px;
+            }
+        } 
     }
 }
 
@@ -981,6 +1009,12 @@ body {
             box-sizing: border-box;
             text-align: center;
         }
+    }
+    
+    .en {
+        header .header_back_color .mediataiou .header_right .annai .annai2 {
+            padding: 5px 7px;
+        }       
     }
 }
 
