--- a/app/views/hyoshigi/why.en.html.erb
+++ b/app/views/hyoshigi/why.en.html.erb
@@ -108,7 +108,7 @@
             </div>
             <div class="tabletext l_5_2">
                 <span>
-                    In japan, the number of chinese tourists <br>
+                    In japan, the number of chinese tourists 
                     increased 5 times in four years.
                 </span>
             </div>
@@ -131,7 +131,7 @@
                     <img alt="researcher" src="/patent.svg">
                 </div>
             </div>
-            <div class="tabletext r_7_1">
+            <div class="tabletext r_7_2">
                 <span>
                     The number of international patent applications in China
                 </span>
@@ -145,7 +145,7 @@
             </div>
             <div class="tabletext l_7_2">
                 <span>
-                    The number of Chinese researchers<br>in the world
+                    The number of Chinese researchers in the world
                 </span>
             </div>
         </div>
