--- a/app/views/hyoshigi/why.zh.html.erb
+++ b/app/views/hyoshigi/why.zh.html.erb
@@ -145,7 +145,7 @@
             </div>
             <div class="tabletext l_7_2">
                 <span>
-                    <br>中国的研究人员总数
+                    中国的研究人员总数<br>
                 </span>
             </div>
         </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="tabletext r_7_2">
                 <span>
-                    各国<br>游戏收入排行榜
+                    各国游戏收入排行榜<br>
                 </span>
             </div>
         </div>
@@ -195,7 +195,7 @@
             </div>
             <div class="tabletext l_7_2">
                 <span>
-                    世界有名的<br>中国IT企业
+                    世界著名的<br>中国IT企业
                 </span>
             </div>
         </div>
